Setting foundations for wordpress theme

--- a/development/sass/main.sass
+++ b/development/sass/main.sass
@@ -1,4 +1,15 @@
-.page-content
+body
+	display: flex
+	align-items: stretch
+	min-height: 100vh
+	overflow-y: scroll
+
+#content
+	width: 80%	
+
+#page
 	max-width: $content-max-width
-	margin: 0 auto
 	padding: 0px $universal-padding
+
+#asside-panel
+	width: 20%
