--- a/development/sass/import.sass
+++ b/development/sass/import.sass
@@ -5,3 +5,9 @@
 
 // main, landing page
 @import "main"
+
+// side panel menu
+@import "side-panel-menu/side-panel-menu.sass"
+
+// page content
+@import "page-content/page-content.sass"
