--- a/development/sass/import.sass
+++ b/development/sass/import.sass
@@ -11,3 +11,6 @@
 
 // page content
 @import "page-content/page-content.sass"
+
+// comments container
+@import "side-panel-comments/comments-container.sass"
