--- a/development/sass/main.sass
+++ b/development/sass/main.sass
@@ -5,9 +5,8 @@ body
 	overflow-y: scroll
 
 #content
-	width: 80%	
-
-#page
-	max-width: $content-max-width
-	padding: 0px $universal-padding
+	width: 844px
+	width: calc(100vw - 2 * 220px)
+	box-sizing: border-box
+	padding: 2% 4%
 
