--- a/development/sass/side-panel-menu/side-panel-menu.sass
+++ b/development/sass/side-panel-menu/side-panel-menu.sass
@@ -1,6 +1,6 @@
 #asside-panel
 	width: 20%
-	min-width: 250px
+	width: 220px
 
 .menu
 	ul
@@ -10,13 +10,16 @@
 
 		li a
 			display: block
-			padding: 17px 34px
+			padding: 12px 17px
 
 			// text
+			font-family: 'Merriweather', serif
 			color: white
 			font-weight: 400
 			text-decoration: none
 			text-align: right
+			font-size: 14px
+			line-height: 21px
 
 			&:hover
 
