--- a/development/sass/page-content/page-content.sass
+++ b/development/sass/page-content/page-content.sass
@@ -1,6 +1,7 @@
 #content-wrap
-	margin: 68px 102px
-	max-width: 640px
+	padding: 5% 10%
+	max-width: 720px
+	margin: 0 auto
 	font-family: 'Merriweather', serif
 	font-size: 18px
 	line-height: 27px
@@ -11,16 +12,30 @@
 
 #page-header
 	position: relative
+	overflow: hidden
 
 	.wp-post-image
-		max-width: calc(640px + 2 * 102px)
+		position: absolute
+		top: 0
+		left: 0
+		max-width: 100%
 		height: auto
+		user-select: none
+		display: block
 
 	h1
-		position: absolute
-		max-width: 640px
-		bottom: 0px
-		left: 102px
-		font-size: 102px
+		position: relative
+		max-width: 720px
+		margin: 0 auto
+		padding: 10% 10% 5%
+
+		// text
+		font-family: 'Merriweather', serif
+		font-size: 68px
 		font-weight: 400
-		line-height: 136px
+		line-height: 102px
+
+		span.text-bg
+			background: rgba(255,255,255,0.9)
+
+
