--- a/development/sass/import.sass
+++ b/development/sass/import.sass
@@ -8,6 +8,7 @@
 
 // side panel menu
 @import "side-panel-menu/side-panel-menu.sass"
+@import "side-panel-menu/progress-bar.sass"
 
 // page content
 @import "page-content/page-content.sass"
