--- a/development/sass/page-content/page-content.sass
+++ b/development/sass/page-content/page-content.sass
@@ -1,3 +1,11 @@
+@keyframes showUp
+	from
+		opacity: 0
+		transform: translateY(25px)
+	to
+		opacity: 1
+		transform: translateY(0px)
+
 #content-wrap
 	padding: 5% 10%
 	max-width: 720px
@@ -6,6 +14,13 @@
 	font-size: 18px
 	line-height: 27px
 	color: #111
+
+	// animation
+	opacity: 0
+	animation-name: showUp
+	animation-duration: 0.5s
+	animation-fill-mode: forwards
+	animation-delay: 0.1s
 
 	blockquote
 		background: #EEE
@@ -28,6 +43,13 @@
 		max-width: 720px
 		margin: 0 auto
 		padding: 10% 10% 5%
+
+		// animation
+		opacity: 0
+		transform: translateY(25px)
+		animation-name: showUp
+		animation-duration: 0.5s
+		animation-fill-mode: forwards
 
 		// text
 		font-family: 'Merriweather', serif
