--- a/development/sass/side-panel-menu/side-panel-menu.sass
+++ b/development/sass/side-panel-menu/side-panel-menu.sass
@@ -9,8 +9,12 @@
 		margin: 0px
 
 		li a
+			position: relative
 			display: block
-			padding: 12px 17px
+			padding: 17px
+			padding-right: 51px
+			border-top: 1px solid #777
+			box-shadow: 0px 1px #777
 
 			// text
 			font-family: 'Merriweather', serif
@@ -22,6 +26,8 @@
 			line-height: 21px
 
 			&:hover
+				transition: 0.2s
+				background: rgba(255,255,255,0.2)
 
 #searchform
 	padding: 34px
