lighter - side panel menu

--- a/development/sass/page-content/page-content.sass
+++ b/development/sass/page-content/page-content.sass
@@ -28,21 +28,15 @@
 #page-header
 	position: relative
 	overflow: hidden
-
-	.wp-post-image
-		position: absolute
-		top: 0
-		left: 0
-		max-width: 100%
-		height: auto
-		user-select: none
-		display: block
+	margin-top: 34px
+	border-radius: 10px
+	background-position: top center
+	background-size: cover
 
 	h1
 		position: relative
 		max-width: 720px
 		margin: 0 auto
-		padding: 10% 10% 5%
 
 		// animation
 		opacity: 0
@@ -58,6 +52,6 @@
 		line-height: 102px
 
 		span.text-bg
-			background: rgba(255,255,255,0.9)
+			background: rgba(255,255,255,0.85)
 
 
