--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,8 +59,7 @@ figure {
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE. */
 hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -262,8 +261,7 @@ fieldset {
  * 3. Remove the padding so developers are not caught out when they zero out
  *    `fieldset` elements in all browsers. */
 legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -297,8 +295,7 @@ textarea {
  * 1. Add the correct box sizing in IE 10-.
  * 2. Remove the padding in IE 10-. */
 [type="checkbox"], [type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -373,57 +370,56 @@ template, [hidden] {
 }
 
 body {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: stretch;
-  -webkit-align-items: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
+  align-items: stretch;
   min-height: 100vh;
   overflow-y: scroll;
 }
 
 #content {
   width: 844px;
-  width: -webkit-calc(100vw - 2 * 220px);
   width: calc(100vw - 2 * 220px);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 2% 4%;
+}
+
+.side-menu-item, #asside-panel .home-page-link, .menu ul li a {
+  position: relative;
+  display: block;
+  padding: 17px;
+  box-shadow: 0px 1px #CCC;
+  border-top: 1px solid #CCC;
+  font-family: "Merriweather", serif;
+  color: #333;
+  text-decoration: none;
+}
+.side-menu-item:hover, #asside-panel .home-page-link:hover, .menu ul li a:hover {
+  transition: 0.2s;
 }
 
 #asside-panel {
   width: 20%;
   width: 220px;
+  background: #FEFEFE;
+  box-shadow: 1px 0px #CCC;
+}
+#asside-panel .home-page-link {
+  border-top: 0px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 27px;
 }
 
 .menu ul {
   list-style: none;
-  padding: 34px 0px;
-  margin: 0px;
+  padding: 0px;
+  margin: 0px 0px 34px;
 }
 .menu ul li a {
-  position: relative;
-  display: block;
-  padding: 17px;
-  padding-right: 51px;
-  border-top: 1px solid #777;
-  -webkit-box-shadow: 0px 1px #777;
-          box-shadow: 0px 1px #777;
-  font-family: "Merriweather", serif;
-  color: white;
+  padding-left: 51px;
   font-weight: 400;
-  text-decoration: none;
-  text-align: right;
   font-size: 14px;
   line-height: 21px;
-}
-.menu ul li a:hover {
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-  background: rgba(255, 255, 255, 0.2);
 }
 
 #searchform {
@@ -435,8 +431,7 @@ body {
   font-size: 18px;
   line-height: 27px;
   border: 0px;
-  -webkit-border-radius: 0px;
-          border-radius: 0px;
+  border-radius: 0px;
   border-bottom: 2px solid white;
   max-width: 100%;
 }
@@ -445,32 +440,34 @@ body {
   width: 3px;
   height: 50%;
   position: absolute;
-  background: white;
   z-index: 0;
+  background: #DCDCDC;
 }
 
 .vertical-progress.top {
   top: 0;
-  right: 24px;
+  left: 24px;
 }
 
 .vertical-progress.bottom {
   bottom: 0;
-  right: 24px;
+  left: 24px;
 }
 
 .radial-progress {
   position: absolute;
   width: 20px;
-  top: -webkit-calc(50% - 10px);
   top: calc(50% - 10px);
-  right: 16px;
+  left: 15px;
   z-index: 1;
 }
 .radial-progress .circle {
   position: relative;
   height: 20px;
   width: 20px;
+  border-radius: 50%;
+  background: #FEFEFE;
+  box-shadow: inset 0px 0px 0px 4px #DCDCDC;
 }
 .radial-progress .circle:after {
   content: "";
@@ -478,53 +475,34 @@ body {
   position: absolute;
   width: 14px;
   height: 14px;
-  -webkit-border-radius: 50%;
-          border-radius: 50%;
+  border-radius: 50%;
   top: 3px;
   right: 3px;
+  background: #FEFEFE;
 }
 .radial-progress .circle .mask, .radial-progress .circle .fill {
   position: absolute;
-  -webkit-border-radius: 50%;
-          border-radius: 50%;
   height: 20px;
   width: 20px;
-  -webkit-transition: -webkit-transform 2s linear;
-  transition: -webkit-transform 2s linear;
+  border-radius: 50%;
   transition: transform 2s linear;
-  transition: transform 2s linear, -webkit-transform 2s linear;
 }
 .radial-progress .circle .mask {
   clip: rect(0px, 20px, 20px, 10px);
 }
 .radial-progress .circle .fill {
-  background: white;
+  background: #DCDCDC;
   clip: rect(0px, 10px, 20px, 0px);
-}
-
-@-webkit-keyframes showUp {
-  from {
-    opacity: 0;
-    -webkit-transform: translateY(25px);
-            transform: translateY(25px);
-  }
-  to {
-    opacity: 1;
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
 }
 
 @keyframes showUp {
   from {
     opacity: 0;
-    -webkit-transform: translateY(25px);
-            transform: translateY(25px);
+    transform: translateY(25px);
   }
   to {
     opacity: 1;
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
+    transform: translateY(0px);
   }
 }
 #content-wrap {
@@ -536,14 +514,10 @@ body {
   line-height: 27px;
   color: #111;
   opacity: 0;
-  -webkit-animation-name: showUp;
-          animation-name: showUp;
-  -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
+  animation-name: showUp;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  animation-delay: 0.1s;
 }
 #content-wrap blockquote {
   background: #EEE;
@@ -552,41 +526,27 @@ body {
 #page-header {
   position: relative;
   overflow: hidden;
-}
-#page-header .wp-post-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  max-width: 100%;
-  height: auto;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  display: block;
+  margin-top: 34px;
+  border-radius: 10px;
+  background-position: top center;
+  background-size: cover;
 }
 #page-header h1 {
   position: relative;
   max-width: 720px;
   margin: 0 auto;
-  padding: 10% 10% 5%;
   opacity: 0;
-  -webkit-transform: translateY(25px);
-      -ms-transform: translateY(25px);
-          transform: translateY(25px);
-  -webkit-animation-name: showUp;
-          animation-name: showUp;
-  -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+  transform: translateY(25px);
+  animation-name: showUp;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
   font-family: "Merriweather", serif;
   font-size: 68px;
   font-weight: 400;
   line-height: 102px;
 }
 #page-header h1 span.text-bg {
-  background: rgba(255, 255, 255, 0.9);
+  background: rgba(255, 255, 255, 0.85);
 }
 
 #comments-container {
