--- a/development/sass/side-panel-menu/side-panel-menu.sass
+++ b/development/sass/side-panel-menu/side-panel-menu.sass
@@ -1,33 +1,50 @@
+$border-color: #CCC
+
+.side-menu-item
+	position: relative
+	display: block
+	padding: 17px
+	box-shadow: 0px 1px $border-color
+	border-top: 1px solid $border-color
+
+	// text
+	font-family: 'Merriweather', serif
+	color: #333
+	text-decoration: none
+
+	&:hover
+		transition: 0.2s
+
 #asside-panel
 	width: 20%
 	width: 220px
+	background: #FEFEFE
+	box-shadow: 1px 0px $border-color
+
+	.home-page-link
+		@extend .side-menu-item
+		border-top: 0px
+
+		// text
+		font-weight: 700
+		font-size: 18px
+		line-height: 27px
 
 .menu
 	ul
 		list-style: none
-		padding: 34px 0px
-		margin: 0px
+		padding: 0px
+		margin: 0px 0px 34px
 
 		li a
-			position: relative
-			display: block
-			padding: 17px
-			padding-right: 51px
-			border-top: 1px solid #777
-			box-shadow: 0px 1px #777
+			padding-left: 51px
 
 			// text
-			font-family: 'Merriweather', serif
-			color: white
 			font-weight: 400
-			text-decoration: none
-			text-align: right
 			font-size: 14px
 			line-height: 21px
 
-			&:hover
-				transition: 0.2s
-				background: rgba(255,255,255,0.2)
+			@extend .side-menu-item
 
 #searchform
 	padding: 34px
