--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,7 +59,8 @@ figure {
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE. */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -261,7 +262,8 @@ fieldset {
  * 3. Remove the padding so developers are not caught out when they zero out
  *    `fieldset` elements in all browsers. */
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -295,7 +297,8 @@ textarea {
  * 1. Add the correct box sizing in IE 10-.
  * 2. Remove the padding in IE 10-. */
 [type="checkbox"], [type="radio"] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -370,30 +373,40 @@ template, [hidden] {
 }
 
 body {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  align-items: stretch;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   min-height: 100vh;
   overflow-y: scroll;
 }
 
 #content {
   width: 844px;
+  width: -webkit-calc(100vw - 2 * 220px);
   width: calc(100vw - 2 * 220px);
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 2% 4%;
 }
 
-.side-menu-item, #asside-panel .home-page-link, .menu ul li a {
+.side-menu-item, #asside-panel li .home-page-link, .menu ul li a {
   position: relative;
   display: block;
   padding: 17px;
-  box-shadow: 0px 1px #CCC;
+  -webkit-box-shadow: 0px 1px #CCC;
+          box-shadow: 0px 1px #CCC;
   border-top: 1px solid #CCC;
   font-family: "Merriweather", serif;
   color: #333;
   text-decoration: none;
 }
-.side-menu-item:hover, #asside-panel .home-page-link:hover, .menu ul li a:hover {
+.side-menu-item:hover, #asside-panel li .home-page-link:hover, .menu ul li a:hover {
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
@@ -401,13 +414,36 @@ body {
   width: 20%;
   width: 220px;
   background: #FEFEFE;
-  box-shadow: 1px 0px #CCC;
+  -webkit-box-shadow: 1px 0px #CCC;
+          box-shadow: 1px 0px #CCC;
 }
-#asside-panel .home-page-link {
+#asside-panel li:hover > .home-page-link {
+  clip: rect(0px, 220px, 61px, 220px);
+}
+#asside-panel li:hover > .home-page-link.hover {
+  clip: rect(0px, 220px, 61px, 0px);
+}
+#asside-panel li .home-page-link {
+  clip: rect(0px, 220px, 61px, 0px);
   border-top: 0px;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
   font-weight: 700;
   font-size: 18px;
   line-height: 27px;
+}
+#asside-panel li .home-page-link.hover {
+  overflow: hidden;
+  clip: rect(0px, 0px, 61px, 0px);
+  position: absolute;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  top: 0;
+  left: 0;
+  color: white;
 }
 
 .menu ul {
@@ -431,7 +467,8 @@ body {
   font-size: 18px;
   line-height: 27px;
   border: 0px;
-  border-radius: 0px;
+  -webkit-border-radius: 0px;
+          border-radius: 0px;
   border-bottom: 2px solid white;
   max-width: 100%;
 }
@@ -457,6 +494,7 @@ body {
 .radial-progress {
   position: absolute;
   width: 20px;
+  top: -webkit-calc(50% - 10px);
   top: calc(50% - 10px);
   left: 15px;
   z-index: 1;
@@ -465,9 +503,11 @@ body {
   position: relative;
   height: 20px;
   width: 20px;
-  border-radius: 50%;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
   background: #FEFEFE;
-  box-shadow: inset 0px 0px 0px 4px #DCDCDC;
+  -webkit-box-shadow: inset 0px 0px 0px 4px #DCDCDC;
+          box-shadow: inset 0px 0px 0px 4px #DCDCDC;
 }
 .radial-progress .circle:after {
   content: "";
@@ -475,7 +515,8 @@ body {
   position: absolute;
   width: 14px;
   height: 14px;
-  border-radius: 50%;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
   top: 3px;
   right: 3px;
   background: #FEFEFE;
@@ -484,8 +525,12 @@ body {
   position: absolute;
   height: 20px;
   width: 20px;
-  border-radius: 50%;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  -webkit-transition: -webkit-transform 2s linear;
+  transition: -webkit-transform 2s linear;
   transition: transform 2s linear;
+  transition: transform 2s linear, -webkit-transform 2s linear;
 }
 .radial-progress .circle .mask {
   clip: rect(0px, 20px, 20px, 10px);
@@ -495,14 +540,29 @@ body {
   clip: rect(0px, 10px, 20px, 0px);
 }
 
-@keyframes showUp {
+@-webkit-keyframes showUp {
   from {
     opacity: 0;
-    transform: translateY(25px);
+    -webkit-transform: translateY(25px);
+            transform: translateY(25px);
   }
   to {
     opacity: 1;
-    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes showUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(25px);
+            transform: translateY(25px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
   }
 }
 #content-wrap {
@@ -514,10 +574,14 @@ body {
   line-height: 27px;
   color: #111;
   opacity: 0;
-  animation-name: showUp;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
-  animation-delay: 0.1s;
+  -webkit-animation-name: showUp;
+          animation-name: showUp;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
 }
 #content-wrap blockquote {
   background: #EEE;
@@ -527,7 +591,8 @@ body {
   position: relative;
   overflow: hidden;
   margin-top: 34px;
-  border-radius: 10px;
+  -webkit-border-radius: 10px;
+          border-radius: 10px;
   background-position: top center;
   background-size: cover;
 }
@@ -536,10 +601,15 @@ body {
   max-width: 720px;
   margin: 0 auto;
   opacity: 0;
-  transform: translateY(25px);
-  animation-name: showUp;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
+  -webkit-transform: translateY(25px);
+      -ms-transform: translateY(25px);
+          transform: translateY(25px);
+  -webkit-animation-name: showUp;
+          animation-name: showUp;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
   font-family: "Merriweather", serif;
   font-size: 68px;
   font-weight: 400;
